# image-organizer

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
docs/: image_organizer_doc.md
imgtool/: __init__.py  cli.py  database.py  deduplicator.py  organizer.py  reporter.py  reverter.py  scanner.py
imgtool/utils/: __init__.py  exif.py  hashing.py
scripts/: run_dev.sh
tests/: conftest.py  test_cli.py  test_deduplicator.py  test_organizer.py  test_reporter.py  test_reverter.py  test_scanner.py
